2008-04-18  David Athay  <ko2fan@gmail.com>

	* src/game.cpp, src/openglgraphics.cpp: Mac now uses Apple key for
	emoticons, so alt can be used for alternate characters. Disable vsync
	on mac.

2008-04-17  Dennis Friis  <peavey@placid.dk>

	* src/gui/sell.cpp: Fix shop list not to scroll to top when selling.
	Redo of revision 3801 due to changes in guichan 0.8.0.
	* src/gui/minimap.cpp: Draw NPCs in yellow on minimap and skip drawing
	of warps. Based on idea by leeor_net.

2008-04-16  Dennis Friis  <peavey@placid.dk>

	* src/gui/browserbox.cpp: Fix a basic_string::at sometimes being out
	of range in BrowserBox::draw when checking for line separators and
	color codes.
	* src/localplayer.cpp: Cancel walking to a clicked monster if the
	target is lost while getting to it (killed or otherwise removed).

2008-04-16  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/npc_text.h, src/gui/textbox.cpp, src/gui/npc_text.cpp,
	src/gui/scrollarea.h, src/gui/textbox.h: Restored the text wrapping in
	TextBox, since it was based on overriding a method that is no longer
	virtual in Guichan 0.8.0.
	* src/gui/viewport.cpp: Fixed compilation warning.

2008-04-15  David Athay  <ko2fan@gmail.com>

	* src/gui/viewport.cpp, src/beingmanager.cpp, tmw.cbp: Fixed clicking
	near player.

2008-04-14  Dennis Friis  <peavey@placid.dk>

	* src/gui/chat.cpp: Tweaked /whisper command to allow quoting of nicks
	with spaces in them.

2008-04-14  Philipp Sehmisch  <tmw@crushnet.org>

	* src/resources/dye.cpp: Fixed multi-channel dyeing (patch by fate)
	* src/gui/chat.h: Changed prefix of received whisper messages from
	"says:" to "whispers:"

2008-04-12  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/itemshortcutcontainer.h, src/gui/itemshortcutcontainer.cpp,
	src/gui/itemshortcutwindow.cpp, src/gui/scrollarea.h,
	src/gui/scrollarea.cpp, src/gui/itemshortcutwindow.h: Fixed display of
	item shortcut container. gcn::Widget::setWidth is no longer virtual.

2008-04-11  David Athay  <ko2fan@gmail.com>
