@@ -75,7 +75,7 @@ Being* BeingManager::createBeing(Uint32 id, Uint16 job)
 
     if (job < 10)
         being = new Player(id, job, mMap);
-    else if (job >= 100 & job < 200)
+    else if (job >= 100 && job < 200)
         being = new NPC(id, job, mMap, mNetwork);
     else if (job >= 1000 && job < 1200)
         being = new Monster(id, job, mMap);
