@@ -1,3 +1,7 @@
+2008-04-22  Bjørn Lindeijer  <bjorn@lindeijer.nl>
+
+	* src/beingmanager.cpp: Fixed a bug, thanks GCC 4.3!
+
 2008-04-18  David Athay  <ko2fan@gmail.com>
 
 	* src/game.cpp, src/openglgraphics.cpp: Mac now uses Apple key for
